trying to fix z-index issue | ref #3

--- a/components/Video.module.css
+++ b/components/Video.module.css
@@ -244,6 +244,7 @@
 .tooltip {
     position: relative;
     display: inline-block;
+    z-index: 2;
     /* border-bottom: 1px dotted black; */
 }
 
